--- a/fundamental algebra and analysis/封装模板.tex
+++ b/fundamental algebra and analysis/封装模板.tex
@@ -20,6 +20,10 @@
             citecolor=mlv % 设置各种超链接的颜色
             ]
             {hyperref} % 实现引用超链接功能
+\usepackage{float}
+\numberwithin{figure}{section}
+\usepackage{tikz}
+\usetikzlibrary{shapes.geometric, positioning}
 \usepackage{tcolorbox} % 盒子效果
 \tcbuselibrary{breakable}
 \tcbuselibrary{most} % tcolorbox宏包的设置，详见宏包说明文档
@@ -39,6 +43,8 @@
 \newcommand{\NN}{\mathbb{N}} % 黑板粗体N
 \newcommand{\dis}{\displaystyle}
 \newcommand{\pl}{|\!|}
+\newcommand{\dd}{\mathrm{d}}
+\newcommand{\diam}{\mathrm{diam}}
 % 该文件包含了自定义符号的设置，格式为\newcommand{\⟨符号名⟩}{⟨符号内容⟩}，如\newcommand{\R}{\mathbb{R}}表示实数集
 % ————————————————————————————————————自定义颜色————————————————————————————————————
 \definecolor{mlv}{RGB}{40, 137, 124} % 墨绿
