--- a/fundamental algebra and analysis/fundamental algebra and analysis.tex
+++ b/fundamental algebra and analysis/fundamental algebra and analysis.tex
@@ -12,8 +12,8 @@
 
 \author[I]{Compiled by \textbf{Huayi Chen}}
 \author[II]{$$\&$$Edited by \textbf{Jiete Xue}}
-\author[III, IV, V]{$$-------------------------$$TAs:Postdoc \textbf{Jiedong Jiang,  Yijun Yuan,  Chunhui Liu}}
-\author[VI]{$$$$Substitute Professor\thanks{Chapter 5: Group, Section1-4}: \textbf{Yigeng Zhao}}
+\author[III, IV, V]{$$-------------------------$$TAs: {\small\textbf{Jiedong Jiang,  Yijun Yuan,  Chunhui Liu}}}
+\author[VI, VII]{$$\diamond $$Substitute Professor: {\small\textbf{Yigeng Zhao, Weronica Aniela Czerniawska}}}
 \affil[I]{\itshape\small Department of Mathematics (ITS),  School of Science,  Westlake University}
 \affil[II]{\itshape\small Undegraduate $\beta$ Collage,  Westlake University}
 \affil[I]{\texttt{chenhuayi@westlake.edu.cn}}
@@ -52,13 +52,13 @@
 
 
 
-\include{Chapters/Chapter 1}
-\include{Chapters/Chapter 2}
-\include{Chapters/Chapter 3}
-\include{Chapters/Chapter 4}
-\include{Chapters/Chapter 5}
-\include{Chapters/Chapter 6}
-\include{Chapters/Chapter 7}
+%\include{Chapters/Chapter 1}
+%\include{Chapters/Chapter 2}
+%\include{Chapters/Chapter 3}
+%\include{Chapters/Chapter 4}
+%\include{Chapters/Chapter 5}
+%\include{Chapters/Chapter 6}
+%\include{Chapters/Chapter 7}
 \include{Chapters/Chapter 8}
 
 
